2005-09-05    <NotZed@Ximian.com>

	* em-folder-tree.c (em_folder_tree_get_selected_folder): duh, pass
	the right arguments to get_folder, and make sure we don't try to
	get a non-existant one.

	* em-composer-utils.c (em_utils_forward_messages)
	(em_utils_forward_message, em_utils_forward_quoted)
	(forward_quoted, em_utils_forward_inline, forward_inline)
	(forward_non_attached, forward_attached_cb, forward_attached):
	don't take 'fromuri' anymore, calculate it from the folder if/when
	we need it.

	* em-utils.c (em_utils_folder_is_drafts, em_utils_folder_is_sent) 
	(em_utils_folder_is_outbox): dont take a uri anymore.

	* em-folder-view.h: removed folder_uri, and fixed all callers.

	* *.c: Fixed for camel api changes to folder_changed event.

2005-09-01    <NotZed@Ximian.com>

	* em-tree-store.c (em_tree_store_new): changed to take an array of
	folders and a view id.

2005-08-26    <NotZed@Ximian.com>

	** Merged in gtktreeview-branch, and fixed it enough to run.

2005-06-27    <NotZed@Ximian.com>

	* *.[ch]: Fixes for messageiterator removal.

2005-06-21  Not Zed  <NotZed@Ximian.com>

	* mail-ops.c (em_filter_folder_element_filter): fix for
	filter-driver changes.
	(fetch_mail_fetch): same.  remove all the 'uidcache' rubbish.
	(uid_cachename_hack): finally removed a 'gone before 0.11 (?)
	function.

	* em-format-html.c (emfh_gethttp): fixed for data-cache changes.

2005-06-17  Not Zed  <NotZed@Ximian.com>

	* message-list.c (regen_list_regen): try a different cancellation
	test since we search iteratively now.
	(ml_regen_timeout): try thread-new, so we can run without blocking
	the loading of the next folder, so we can never be cancelled
	anyway.  duh.

2005-06-15  Not Zed  <NotZed@Ximian.com>

	* mail-ops.c (expunge_folder_expunge): call sync w/ expunge.

2005-06-12  Not Zed  <NotZed@Ximian.com>

	* mail-session.c (ms_get_service, ms_get_uri): implement overrides
	so that we can remap uri's from ours to internal ones, so that